GitLabAPI/GitLabAPI/src/objects/GitLabApp__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AppAccessToken__c</fullName>
        <label>AppAccessToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppAdress__c</fullName>
        <label>AppAdress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppId__c</fullName>
        <label>AppId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppRedirectArdress__c</fullName>
        <label>AppRedirectArdress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppSecret__c</fullName>
        <label>AppSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppUniqueToken__c</fullName>
        <label>AppUniqueToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>GitLabApp</label>
</CustomObject>